--- a/frontend/src/components/Navbar/Header/Header.css
+++ b/frontend/src/components/Navbar/Header/Header.css
@@ -38,6 +38,7 @@
     background-color: white;
     font-size: max(1vw, 12px);
     border-radius: 50px;
+    cursor: pointer;
 }
 
 @media (max-width:1050px){
